<resources>
    <string name="app_name">Project Budburst</string>
    <string name="signupURL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/register_mobile</string>
    <string name="get_my_species_in_my_station_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_service.php?get_my_species_in_my_station</string>
    <string name="get_my_sites_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_service.php?get_my_sites</string>
    <string name="get_onetime_plant_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/onetime_plant_download.php</string>
    <string name="get_onetime_observation_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/onetime_observation_download.php</string>
    <string name="get_observation_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_service.php?get_my_obs</string>
    <string name="get_onetimeob_others">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_onetime_otherusers_observation.php</string>
    <string name="authentication_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_service.php?authentication</string>
    <string name="authentication">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_authorization</string>
    <string name="get_floracaching_lists">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_floracaching_list.php</string>
    <string name="get_floracaching_plant_lists">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_floracaching_plant_lists.php</string>
    <string name="user_plant_lists_image">http://networkednaturalist.org/User_Plant_Lists_Images/</string>
    <string name="get_user_defined_species_lists">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_tree_lists.php</string>
    <string name="add_site_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/register.php</string>
    <string name="download_obs_image_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/upload_images/view.php</string>
    <string name="download_onetime_image_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/upload_images/onetime.php</string>
    <string name="add_plant_URL">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/phone_service.php?add_plant</string>
    <string name="upload_ot_observation">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/onetime_ob_service</string>
    <string name="request_to_kickoff_background_search">http://networkednaturalist.org/python_scripts/cens-dylan/announce.py</string>
    <string name="request_to_get_result">http://networkednaturalist.org/python_scripts/cens-dylan/search.py</string>
    <string name="check_version_number">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/checkUpdates.php</string>
    <string name="plant_of_week">http://networkednaturalist.org/python_scripts/plant_of_the_week_scrape.py</string>
    <string name="get_floracache_detail_info">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_floracache_detail.php?floracache_id</string>
    <string name="get_user_defined_tree_large_image">http://networkednaturalist.org/User_Plant_Lists_Images/</string>
    <string name="submit_question">You have unsubmitted observations. Do you want to submit them?</string>
    <string name="get_user_defined_group">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/phone/get_user_defined_group.php</string>
    <string name="get_floracache_species_image">http://cens.solidnetdns.com/~kshan/PBB/PBsite_CENS/upload_images/onetime.php?image_id=</string>
    <string name="get_local_usda_plant_list">http://networkednaturalist.org/python_scripts/cens-dylan/list.py</string>
    <string name="no_site_no_species_instruction">\nNo sites or plants were found! If this is your first login, please follow the steps below.\n\n (1) Add a monitored BudBurst Observer plant. \nClick MENU-&gt;ADD-&gt;Add Observer Plant \n\n (2) Share an Occasional Observer plant. \nClick MENU-&gt;ADD-&gt;Share Occasional Plant\n\n\n If you already have observed species, then click MENU-&gt;SYNCHRONIZE\n\n</string>
    <string name="Floracache_Easy_Success">Great! You are very close to the species. Proceed to make an observation?</string>
    <string name="instruction_old">You have no plants yet, or you need to synchronize your phone.\n\n (1) Synchronize your phone. \n\n If you just logged in\n\n (2) Start by adding a plant to an existing site (MENU &gt; Add Plant). \n\n (3) Please synchronize your phone with the database (Menu &gt; Synchronize).  If this fails, you may have connectivity problems.</string>
    <string name="instruction">\n\nYou have just logged in and now need to synchronize your phone with the Project Budburst database.\n\nPlease click the Synchronize button if you have connectivity.\n\nYou can find Synchronize button at any page by clicking the MENU button.</string>
    <string name="instruction2">\n\nYou have reached the synchronize page again. If you have some network problem while synchronization, please press Synchronize button again.</string>
    <string-array name="state">
       <item>AL</item> 
       <item>AK</item> 
       <item>AZ</item> 
       <item>AR</item> 
       <item>CA</item> 
       <item>CO</item> 
       <item>CT</item> 
       <item>DE</item> 
       <item>DC</item> 
       <item>FL</item> 
       <item>GA</item> 
       <item>ID</item> 
       <item>IL</item> 
       <item>IN</item> 
       <item>IA</item> 
       <item>KS</item> 
       <item>KY</item> 
       <item>LA</item> 
       <item>ME</item> 
       <item>MD</item> 
       <item>MA</item> 
       <item>MI</item> 
       <item>MN</item> 
       <item>MS</item> 
       <item>MO</item> 
       <item>MT</item> 
       <item>NE</item> 
       <item>NV</item> 
       <item>NH</item> 
       <item>NJ</item> 
       <item>NM</item> 
       <item>NY</item> 
       <item>NC</item> 
       <item>ND</item> 
       <item>OH</item> 
       <item>OK</item> 
       <item>OR</item> 
       <item>PA</item> 
       <item>RI</item> 
       <item>SC</item> 
       <item>SD</item> 
       <item>TN</item> 
       <item>TX</item> 
       <item>UT</item> 
       <item>VT</item> 
       <item>VA</item> 
       <item>WA</item> 
       <item>WV</item> 
       <item>WI</item> 
       <item>WY</item> 
    </string-array>
<string name="OneTimeMain_Header">Species Lists</string>
<string name="AddNotes">Add Notes</string>
<string name="Title_text">A National Phenology and\nClimate Change Campaign\nfor Citizen Scientists!</string>
<string name="sign_up">Sign Up!</string>
<string name="preview_mode">Preview Mode</string>
<string name="login">Log In</string>
<string name="hello">Hello</string>
<string name="budburst_arrow">Bud\nBurst</string>
<string name="Flora_arrow">Flora\nObs</string>
<string name="splash_text">Collect Climate Change Data While Sharing Your Plant Observations</string>
<string name="spalsh_text_2">Timing is Everything!</string>
<string name="AddPlant_top10">Project BudBurst Plants: Top 10</string>
<string name="AddPlant_all">Project BudBurst Plants: All</string>
<string name="AddPlant_local">Project BudBurst Plants: Local</string>
<string name="AddPlant_SelectCategory">Select Category</string>
<string name="AddPlant_addFlowers">Project BudBurst Plants: Flowers</string>
<string name="AddPlant_addGrass">Project BudBurst Plants: Grass</string>
<string name="AddPlant_addDecid">Project BudBurst Plants: Deciduous</string>
<string name="AddPlant_addEvergreen">Project BudBurst Plants: Evergreen</string>
<string name="AddPlant_addConifer">Project BudBurst Plants: Conifer</string>
<string name="AddPlant_chooseSite">Choose site</string>
<string name="Button_back">Back</string>
<string name="Button_select">Select</string>
<string name="AddPlant_pleaseSelectSite">Please select site.</string>
<string name="AddPlant_alreadyExists">The selected plant already exists in the site, please create a new site.</string>
<string name="AddPlant_newAdded">New Plant Added!</string>
<string name="Alert_dbError">Database error.</string>
<string name="Button_cancel">Cancel</string>
<string name="AddSite_addSite">Add Site</string>
<string name="AddSite_checkSiteName">Please check your site name</string>
<string name="AddSite_alreadyExists">The site name is already in your site list.  Please type another name.</string>
<string name="AddSite_newAdded">New Site Added!</string>
<string name="AddSite_note1">Please note that the new site will be shown on the list after you add a plant.</string>
<string name="Button_OK">OK</string>
<string name="Message_locationDisabled">Your location service is disabled.  Please enable your wireless networks and/or GPS to identify your location.</string>
<string name="Button_enable">Enable</string>
<string name="AddSite_gotGPS">Got your location. \nTurning GPS off.</string>
<string name="Alert_gettingGPS">Getting your location...</string>
<string name="AddSite_disabledGPS">GPS disabled</string>
<string name="AddSite_intro">Describe the site</string>
<string name="AddSite_siteName">Site Name (required)</string>
<string name="AddSite_latlong">Current Latitude/Longitude</string>
<string name="AddSite_gettingLatLong">Getting lat/long from GPS...</string>
<string name="AddSite_address">Address</string>
<string name="AddSite_lookingAddress">Looking up address...</string>
<string name="AddSite_description">Site Description</string>
<string name="AddSite_optional">Site Note (optional)</string>
<string name="Button_save">Done</string>
<string name="BBList_top10">Top 10</string>
<string name="BBList_all">All</string>
<string name="BBList_group">Groups</string>
<string name="BBList_leaves">Leaves</string>
<string name="BBList_flowers">Flowers</string>
<string name="BBList_fruits">Fruits</string>
<string name="Unknown_Plant_Text_1">Add plant name from a list below or skip if unknown.</string>
<string name="Done">Quit</string>
<string name="Add_Notes">Notes</string>
<string name="Move_To_Site">Site</string>
<string name="Help_About_this_project">About this Project</string>
<string name="Help_About_Version">Version 1.0</string>
<string name="Help_About_para1">Project BudBurst is a citizen science campaign for the study of the timing of life cycle events in plants as they relate to the environment.  With the help of volunteers, we wish to understand what \&quot;calendar\&quot; plants use to begin flowering, leafing or reproducing.</string>
<string name="Help_About_budburst_link">http://BudBurst.org</string>
<string name="Help_About_para2">This mobile app is a partnership between the National Environmental Observatory Network (NEON) and the Center for Embedded Networked Sensing (CENS) at UCLA.</string>
<string name="Help_About_cens_link">http://cens.ucla.edu</string>
<string name="Help_About_para3">If you would like to comment on this app, if you find any bugs, or would like to offer suggestions, please send us a message:</string>
<string name="Help_About_netnat_link">mobile@NetworkedNaturalist.org</string>
<string name="Help_About_para4">Some of the people who have contributed to this mobile project include:</string>
<string name="Help_About_para5">Project BudBurst is a proud member of the USA National Phenology Network and as such, providing data to scientists studying phenology is one of our main goals.</string>
<string name="Help_About_people">Jameel Al-Aziz\nDeborah Estrin\nLisa Gardiner\nEric Graham\nKyung Han\nSandra Henderson\nJinha Kang\nKeith Mayoral\nDylan Vassallo\nDennis Ward\nEric Yuen\n</string>
<string name="Help_About_npn_link">http://usanpn.org</string>
<string name="Help_About_NEON_url">http://www.neoninc.org</string>
<string name="Help_About_para0">Please note: data collected using this mobile app is being temporarily sent to a different location than the official Project BudBurst site!\n\nIf you would like to manage and download your collected data, please visit this link:</string>
<string name="Help_About_para0_url">http://bit.ly/mobilePBB</string>
</resources>