<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
<LinearLayout
  android:orientation="vertical" 
  android:layout_width="fill_parent" 
  android:background="@color/BudBurstLightBackground" 
  android:isScrollContainer="true" 
  android:scrollbarAlwaysDrawVerticalTrack="true" 
  android:scrollbars="vertical" 
  android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_marginBottom="10px" android:background="@color/BudBurstBackground" android:layout_width="fill_parent" android:gravity="center_horizontal" android:orientation="vertical" android:layout_height="wrap_content">
		<ImageView android:layout_height="60dp" android:id="@+id/ImageView01" android:layout_width="wrap_content" android:src="@drawable/header_help" android:paddingTop="5dp" android:scaleType="fitCenter"></ImageView>
	</LinearLayout>


	<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Help_About_this_project" android:textStyle="bold" android:gravity="center_horizontal" android:textSize="25dip" android:textColor="@color/black"></TextView>
	<TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent" android:text="@string/Help_About_Version" android:textStyle="bold" android:textSize="18dip" android:textColor="@color/black"></TextView>
	<TextView android:id="@+id/TextView012" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="18dip" android:text="@string/Help_About_para0" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingTop="10dip" android:textColor="@color/black" android:textStyle="bold"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView013" android:paddingTop="10dip" android:text="@string/Help_About_para0_url" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal"></TextView>
	<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="18dip" android:text="@string/Help_About_para1" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingTop="10dip" android:textColor="@color/black"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView04" android:paddingTop="10dip" android:text="@string/Help_About_budburst_link" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal"></TextView>
	
	<TextView android:paddingRight="10dip" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView11" android:paddingTop="10dip" android:text="@string/Help_About_para5" android:paddingLeft="10dip" android:layout_height="wrap_content" android:textColor="@color/black"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView12" android:paddingTop="10dip" android:text="@string/Help_About_npn_link" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal"></TextView>
	
	
	<TextView android:paddingRight="10dip" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView05" android:paddingTop="10dip" android:text="@string/Help_About_para2" android:paddingLeft="10dip" android:layout_height="wrap_content" android:textColor="@color/black"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView011" android:paddingTop="10dip" android:text="@string/Help_About_NEON_url" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView06" android:paddingTop="10dip" android:text="@string/Help_About_cens_link" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal"></TextView>
	<TextView android:paddingRight="10dip" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView07" android:paddingTop="10dip" android:text="@string/Help_About_para3" android:paddingLeft="10dip" android:layout_height="wrap_content" android:textColor="@color/black"></TextView>
	<TextView android:paddingRight="10dip" android:clickable="true" android:linksClickable="true" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView08" android:paddingTop="10dip" android:text="@string/Help_About_netnat_link" android:paddingLeft="10dip" android:typeface="normal" android:autoLink="web|email" android:layout_height="wrap_content" android:gravity="center_horizontal" android:textStyle="normal" android:textColorLink="@color/blue" android:textColor="@color/blue"></TextView>
	<TextView android:paddingRight="10dip" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView09" android:paddingTop="10dip" android:paddingLeft="10dip" android:layout_height="wrap_content" android:text="@string/Help_About_para4" android:textColor="@color/black"></TextView>
	<TextView android:paddingRight="10dip" android:textSize="18dip" android:layout_width="fill_parent" android:id="@+id/TextView10" android:paddingTop="10dip" android:paddingLeft="10dip" android:layout_height="wrap_content" android:text="@string/Help_About_people" android:gravity="center_horizontal" android:textColor="@color/black"></TextView>


</LinearLayout>
</ScrollView>