<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:id="@+id/AddSiteScroll"
>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/box_drawable_gray">

	<TextView
	android:id="@+id/instruction"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_marginTop="10dip"
	android:layout_marginLeft="5dip"
	android:layout_marginRight="5dip"
	android:textSize="17dip"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:text="@string/AddSite_intro" android:gravity="center_horizontal">
	</TextView>
	
	<TextView
	android:id="@+id/sitename_lable"
	android:textStyle="bold"
	android:layout_below="@+id/instruction"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_marginTop="10dip"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="5dip"
	android:textSize="17dip" android:text="@string/AddSite_siteName">
	</TextView>
	<EditText 
	android:id="@+id/sitename"
	android:layout_below="@+id/sitename_lable"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="30dip"	
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:hint="@string/AddSite_siteName">
	</EditText>
	
	<TextView
	android:id="@+id/latitude_label"
	android:layout_below="@+id/sitename"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_marginTop="5dip"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="5dip"
	android:textStyle="bold"
	android:textSize="17dip"
	android:focusableInTouchMode="true"
	android:focusable="true"
	android:text="@string/AddSite_latlong">
	</TextView>
	
	<EditText 
	android:id="@+id/latitude"
	android:layout_below="@+id/latitude_label"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="30dip"	
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:enabled="false"
	android:textColor="@color/black"
	android:textSize="16px"
	android:hint="@string/AddSite_gettingLatLong">
	</EditText>

	<TextView
	android:id="@+id/longitude_label"
	android:textStyle="bold"
	android:layout_below="@+id/latitude"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_marginTop="10dip"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="5dip"
	android:textSize="17dip" android:text="@string/AddSite_address">
	</TextView>
	<EditText 
	android:id="@+id/longitude"
	android:layout_below="@+id/longitude_label"
	android:textSize="16px"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="30dip"	
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:enabled="false"
	android:textColor="@color/black"
	android:hint="@string/AddSite_lookingAddress">
	</EditText>

	<TextView
	android:id="@+id/comment_lable"
	android:layout_below="@+id/longitude"
	android:textStyle="bold"
	android:layout_marginTop="10dip"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="5dip"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:textSize="17dip" android:text="@string/AddSite_description">
	</TextView>
	<EditText 
	android:id="@+id/comment"
	android:layout_below="@+id/comment_lable"
	android:gravity="top"
	android:layout_marginLeft="30dip"
	android:layout_marginRight="30dip"	
	android:layout_height="100dip"
	android:layout_width="fill_parent"
	android:hint="@string/AddSite_optional">
	</EditText>

	<LinearLayout
	android:id="@+id/buttons"
	android:layout_below="@+id/comment"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
	
	<Button
	android:id="@+id/save"
	android:textColor="@drawable/black"
	android:layout_width="130dip"
	android:layout_height="wrap_content"
	android:layout_margin="10dip"
	android:gravity="center" 
	android:textSize="20dip"
	android:focusable="true"
	android:text="@string/Button_save"/>
	
	<Button
	android:id="@+id/cancel"
	android:textColor="@drawable/black"
	android:layout_width="130dip"
	android:layout_height="wrap_content"
	android:layout_margin="10dip"
	android:layout_centerHorizontal="true"
	android:gravity="center" 
	android:textSize="20dip"
	android:focusable="true"
	android:text="@string/Button_cancel"/>
	</LinearLayout>
</RelativeLayout>
</ScrollView>