<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <!-- 
	<LinearLayout
		android:id="@+id/logo_layout"
		android:layout_width="fill_parent"
		android:layout_height="59px"
		android:gravity="center_vertical|center_horizontal" 
		android:background="@color/BudBurstBackground">
		<ImageView 
			android:id="@+id/logo" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:src="@drawable/header_small_modified">
		</ImageView>
	</LinearLayout>
	 -->    
    <LinearLayout
		android:id="@+id/header_item"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="10dp"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingBottom="5dp"
		android:background="@drawable/bg_line"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1"
		>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.05"
		/>
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/submit"
			android:text="@string/Done"
			android:layout_weight="0.25"
		/>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.05"
		/>
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/movetosite"
			android:text="@string/Move_To_Site"
			android:layout_weight="0.3"
		/>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="0.05"
		/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/notes"
			android:text="@string/Add_Notes"
			android:layout_weight="0.25"
		/>
	</LinearLayout>
	<TextView
		android:layout_below="@+id/header_item"
		android:layout_marginLeft="2dp"
		android:layout_marginBottom="3dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Unknown_Plant_Text_1"
		android:textSize="15dp"
	/>
	</LinearLayout>
	<ListView 
		android:id="@android:id/list"
		android:layout_below="@+id/header_item"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
	</ListView>
	<!-- 
	<LinearLayout
		android:layout_weight="0.8"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:paddingLeft="10px"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<EditText
				android:layout_width="200px"
				android:layout_height="fill_parent"
				android:id="@+id/unknown_plant"
			/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_marginLeft="10px"
				android:id="@+id/submit"
				android:text="@string/Submit"
			/>
		</LinearLayout>
	<TextView
		android:layout_marginTop="5px"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/Unknown_Plant_Text"
	/>
	</LinearLayout>
	 -->
	
</RelativeLayout>


