<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:id="@+id/header_box"
    	android:layout_marginTop="10px"
		android:background="@drawable/bg_line"
    >
    <RadioGroup
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:id="@+id/radio_group"
    	android:weightSum="1"
    >
    	<RadioButton
    		android:checked="true"
    		android:id="@+id/option1"
    		android:layout_weight="0.3"
    	/>
    	<RadioButton
    		android:checked="false"
    		android:id="@+id/option2"
    		android:layout_weight="0.3"
    	/>
    	<RadioButton
    		android:checked="false"
    		android:id="@+id/option3"
    		android:layout_weight="0.1"
    	/>    	
    </RadioGroup>
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/radio_group"
    	android:paddingLeft="10px"
    	android:paddingBottom="8px"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:layout_marginTop="-10px"
    	android:weightSum="1">
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.2"
    		android:textColor="@drawable/black"
    	android:text="@string/BBList_leaves"/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.3"
    		android:paddingLeft="18px"
    		android:textColor="@drawable/black"
    	android:text="@string/BBList_flowers"/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.3"
    		android:paddingLeft="10px"
    		android:textColor="@drawable/black"
    	android:text="@string/BBList_fruits"/>
    
    </LinearLayout>
	</LinearLayout>
  	<ListView
		android:id="@android:id/list"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
</LinearLayout>
