<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:id="@+id/header_box"
    	android:layout_marginTop="10px"
		android:background="@drawable/bg_line"
    >
    <RadioGroup
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center"
    	android:id="@+id/radio_group"
    	android:weightSum="1"
    >
        <TextView
    		android:checked="false"
    		android:layout_weight="0.2"
    	/>
    	<RadioButton
    		android:checked="true"
    		android:id="@+id/option1"
    		android:layout_weight="0.26"
    	/>
    	<RadioButton
    		android:checked="false"
    		android:id="@+id/option2"
    		android:layout_weight="0.26"
    	/>
    	<RadioButton
    		android:checked="false"
    		android:id="@+id/option3"
    		android:layout_weight="0.26"
    	/>    	
    </RadioGroup>
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/radio_group"
    	android:paddingBottom="8dp"
    	android:orientation="horizontal"
    	android:layout_marginTop="-10dp"
    	android:weightSum="1">
		<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.2"
    	/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.26"
    		android:textColor="@drawable/black"
    		android:text="@string/BBList_top10"/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.26"
    		android:textColor="@drawable/black"
    		android:text="@string/BBList_all"/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.26"
    		android:textColor="@drawable/black"
    	    android:text="@string/BBList_group"/>
    
    </LinearLayout>
	</LinearLayout>
	<ListView
		android:id="@android:id/list"
		android:layout_below="@+id/header_box"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
</RelativeLayout>